--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,7 +1,8 @@
 # Change these first
 owner: ec-snee # Your GitHub organization or username, where this repository lives
 repo: gobeyond-uptime # The name of this repository
-
+assignees:
+  - ec-snee
 sites:
   - name: Gobeyond API
     url: https://api.gobeyond-project.eu/health-check
