Split check for api and upstream for both platforms
Will now be able to differentiate uptimes for the API itself against upstream errors in stats

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,9 +5,19 @@ assignees:
   - ec-snee
 sites:
   - name: Gobeyond API
+    url: https://api.gobeyond-project.eu/wms/?service=WMS&version=1.3.0&request=GetCapabilities
+    expectedStatusCodes:
+      - 200
+    maxResponseTime: 1000
+  - name: Gobeyond Upstream
     url: https://api.gobeyond-project.eu/health-check
     __dangerous__body_down_if_text_missing: 'Status: OK'
   - name: Gobeyond Dev API
+    url: http://136.156.139.134/wms/?service=WMS&version=1.3.0&request=GetCapabilities
+    expectedStatusCodes:
+      - 200
+    maxResponseTime: 1000
+  - name: Gobeyond Dev Upstream
     url: http://136.156.139.134/health-check
     __dangerous__body_down_if_text_missing: 'Status: OK'
 status-website:
